--- a/build.gradle
+++ b/build.gradle
@@ -25,7 +25,9 @@ repositories {
 }
 
 dependencies {
-    implementation 'org.springframework.boot:spring-boot-starter-web'
-    testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    compile('org.springframework.boot:spring-boot-starter-web')
+    compile('org.springframework.boot:spring-boot-starter-data-jpa')
+    compile('mysql:mysql-connector-java')
     compileOnly('org.projectlombok:lombok')
+    testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
