--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,6 @@
 #DATABASE CONFIGURATION
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database=mysql
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MYSQL8Dialect
-spring.datasource.url=jdbc:mysql://localhost:3306/task_crud?serverTimezone=Europe/Warsaw&useSSL=False
+spring.datasource.url=jdbc:mysql://localhost:3306/task_crud?serverTimezone=Europe/Warsaw&useSSL=False&allowPublicKeyRetrieval=true
 spring.datasource.username=kodilla
 spring.datasource.password=kodilla_password
