--- a/build.gradle
+++ b/build.gradle
@@ -28,7 +28,8 @@ repositories {
 dependencies {
     compile('org.springframework.boot:spring-boot-starter-web')
     compile('org.springframework.boot:spring-boot-starter-data-jpa')
-    compile('mysql:mysql-connector-java')
+//    compile('mysql:mysql-connector-java')
+    compile('org.postgresql:postgresql')
     compileOnly('org.projectlombok:lombok:1.18.8')
     annotationProcessor('org.projectlombok:lombok:1.18.8')
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
