--- a/build.gradle
+++ b/build.gradle
@@ -34,4 +34,6 @@ dependencies {
     annotationProcessor('org.projectlombok:lombok:1.18.8')
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 //    providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'
+    compile('io.springfox:springfox-swagger2:2.7.0')
+    compile('io.springfox:springfox-swagger-ui:2.7.0')
 }
