--- a/build.gradle
+++ b/build.gradle
@@ -28,12 +28,15 @@ repositories {
 dependencies {
     compile('org.springframework.boot:spring-boot-starter-web')
     compile('org.springframework.boot:spring-boot-starter-data-jpa')
-//    compile('mysql:mysql-connector-java')
-    compile('org.postgresql:postgresql')
+    compile('mysql:mysql-connector-java')
+//    compile('org.postgresql:postgresql')
+    compile('io.springfox:springfox-swagger2:2.7.0')
+    compile('io.springfox:springfox-swagger-ui:2.7.0')
+    compile('org.springframework.boot:spring-boot-starter-mail:2.2.2.RELEASE')
+
     compileOnly('org.projectlombok:lombok:1.18.8')
     annotationProcessor('org.projectlombok:lombok:1.18.8')
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 //    providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'
-    compile('io.springfox:springfox-swagger2:2.7.0')
-    compile('io.springfox:springfox-swagger-ui:2.7.0')
+
 }
