--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,13 @@
 #DATABASE CONFIGURATION
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.database=postgresql
-#spring.datasource.url=jdbc:mysql://localhost:3306/task_crud?serverTimezone=Europe/Warsaw&useSSL=False&allowPublicKeyRetrieval=true
-spring.datasource.url=$(JDBC_DATABASE_SQL}
-spring.datasource.username=${JDBC_DATABASE_USERNAME}
-spring.datasource.password=${JDBC_DATABASE_PASSWORD}
+spring.jpa.database=mysql
+#spring.jpa.database=postgresql
+spring.datasource.url=jdbc:mysql://localhost:3306/task_crud?serverTimezone=Europe/Warsaw&useSSL=False&allowPublicKeyRetrieval=true
+#spring.datasource.url=$(JDBC_DATABASE_SQL}
+spring.datasource.username=kodilla
+spring.datasource.password=kodilla_password
+#spring.datasource.username=${JDBC_DATABASE_USERNAME}
+#spring.datasource.password=${JDBC_DATABASE_PASSWORD}
 #TRELLO CONFIGURATION
 trello.api.endpoint.prod=https://api.trello.com/1/
 trello.app.key=dd1ed34e131705ed92c4f304aa59efb1
