--- a/build.gradle
+++ b/build.gradle
@@ -38,6 +38,6 @@ dependencies {
     annotationProcessor('org.projectlombok:lombok:1.18.8')
     testImplementation('org.springframework.boot:spring-boot-starter-test')
 //    providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'
-    testCompile group: 'org.mockito', name: 'mockito-all', version: '2.0.2-beta'
-    testCompile group: 'junit', name: 'junit', version: '4.13-rc-2'
+//    testCompile group: 'org.mockito', name: 'mockito-all', version: '2.0.2-beta'
+//    testCompile group: 'junit', name: 'junit', version: '4.13-rc-2'
 }
