actuator/info update

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,3 +22,18 @@ spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 #ADMINISTRATION
 admin.mail=suoku667@gmail.com
+#ACTUATOR PROPERTIES
+management.endpoints.web.exposure.include=*
+#ACTUTOR INFO
+info.app.name=Tasks Application
+info.app.description=Application created during Kodilla course!
+info.app.version=1.0.0
+info.app.owner.name=Grzegorz
+info.app.owner.surname=Brzeczyszczykiewicz
+info.administrator.email=john.doe@test.com
+info.administrator.address.street=Bardzo smieszna ulica
+info.administrator.address.number=42
+info.company.name=TaskCrudAppCreator
+info.company.goal=Rzady sie zmieniaja a wy zawsze w komisjach towarzyszu...
+info.company.email=tasks@crud.com
+info.company.phone=+4895131543123
