--- a/build.gradle
+++ b/build.gradle
@@ -34,6 +34,7 @@ dependencies {
     compile('io.springfox:springfox-swagger-ui:2.7.0')
     compile('org.springframework.boot:spring-boot-starter-mail:2.2.2.RELEASE')
     compile('com.google.code.gson:gson:2.8.2')
+    compile('org.springframework.boot:spring-boot-starter-actuator')
 
     compileOnly('org.projectlombok:lombok:1.18.8')
     annotationProcessor('org.projectlombok:lombok:1.18.8')
